version 20070710_1
A simple no_opts so that it remains after a page edit.

version 20070704_2
Added pruning to the page links list.  Added a couple of tests
for it, too.

version 20070704_1
Sped up the rss feed generation for the links search by removing
the check for each page name's validity.

version 20070703_1
Added the rss feed for the page links search.

version 20070702_1
Removed the page name check from the recursive links processing.
This greatly increases the speed of the processing.

version 20070622_2
Made the edit "cancel" button do the right thing instead of just
going 'back'.  Added a handful of tests to the Selenium tests
to check for the proper functioning of the "cancel" button.

version 20070622_1
Fix for: If you click "edit this page" on an older page, it
correctly warns you that you are editing an older version.
If you click on "Edit the latest version", it continues to
warn you that you are editing an older version.

version 20070620_1
The redirects didn't actually work in IE, but now they do.

version 20070619_1
Changes to the built-in server to make it handle redirects and
give normal headers properly.

version 20070618_2
Added the expires HTTP header to expire each page -1d (ASAP!)
This ought to keep browsers from caching the page.

version 20070618_1
Added a fallback library of modules to help make installation
super-fast.

version 20070617_4
Came up with a better alternative to the "loops back" wording in the
link tree page.

version 20070617_3
Fixed a bug in the is_a_valid_link subroutine.  It needed to resolve
a page alias before testing if it could link to the page.

version 20070617_2
When you use the quick palette to make a change, then close it,
it now updates the page.

version 20070617_1
Only have the encrypt button when in "edit" mode.  There's no point
to it in the "view" mode.  Updated the Selenium tests.

version 20070616_1
Added caching to the links out of a page.  It stores all *possible*